--- a/home.html
+++ b/home.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pendampingan Bimbingan TA</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <style>
-      .carousel {
-        overflow: hidden;
-      }
-
-      .carousel img {
-        object-fit: cover;
-      }
-
-      .hero {
-      }
-
-      .card img {
-        height: 300px; /* Mengatur tinggi gambar */
-        object-fit: fill;
-      }
-    </style>
   </head>
   <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav
+      class="navbar navbar-expand-lg fixed-top"
+      style="background-color: rgba(0, 0, 0, 0.5)"
+    >
       <div class="container">
-        <a class="navbar-brand" href="#">Bimbingan TA</a>
+        <a
+          class="navbar-brand fw-bold"
+          style="color: white; font-size: 30px"
+          href="#"
+          >Bimbingan TA</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -47,28 +38,33 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Data Mahasiswa</a
+              <a
+                class="nav-link active"
+                style="color: white; font-size: 20px"
+                aria-current="page"
+                href="#Home"
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Jadwal Bimbingan</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tampilkan Semua Data</a>
+              <a
+                class="nav-link"
+                style="color: white; font-size: 20px"
+                href="#About"
+                >About</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!--Carousel-->
-    <section class="mt-5 pt-5">
-      <div id="carouselExampleIndicators" class="carousel slide">
+    <section id="Home" class="hero-section">
+      <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#carouselExampleCaptions"
             data-bs-slide-to="0"
             class="active"
             aria-current="true"
@@ -76,32 +72,35 @@
           ></button>
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#carouselExampleCaptions"
             data-bs-slide-to="1"
             aria-label="Slide 2"
           ></button>
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#carouselExampleCaptions"
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./assets/umy1.jpg" class="d-block w-100" alt="UMY 1" />
+        <div class="carousel-inner vh-100">
+          <div class="carousel-item active vh-100">
+            <img src="./assets/umy1.jpg" class="d-block w-100" alt="" />
+            <div class="carousel-caption"></div>
           </div>
-          <div class="carousel-item">
-            <img src="./assets/umy2.jpg" class="d-block w-100" alt="UMY 2" />
+          <div class="carousel-item vh-100">
+            <img src="./assets/umy2.jpg" class="d-block w-100" alt="." />
+            <div class="carousel-caption"></div>
           </div>
-          <div class="carousel-item">
-            <img src="./assets/umy3.jpg" class="d-block w-100" alt="UMY 3" />
+          <div class="carousel-item vh-100">
+            <img src="./assets/umy3.jpg" class="d-block w-100" alt="" />
+            <div class="carousel-caption"></div>
           </div>
         </div>
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselExampleIndicators"
+          data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -110,7 +109,7 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselExampleIndicators"
+          data-bs-target="#carouselExampleCaptions"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -120,18 +119,20 @@
     </section>
 
     <!--Card-->
-    <section class="hero">
+    <section
+      id="About"
+      class="hero d-flex align-items-center justify-content-center vh-100"
+    >
       <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
           <div class="col">
-            <div class="card h-100 bg-dark text-white">
+            <div class="card h-100 bg-dark text-white rounded-4">
               <img
                 src="./assets/pencil.png"
-                class="card-img-top"
-                style=""
+                class="card-img-top img-fluid w-50 mx-auto mt-3"
                 alt="Data Mahasiswa"
               />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <h5 class="card-title">Data Mahasiswa</h5>
                 <p class="card-text">
                   Untuk menginput semua Data Mahasiswa yang akan melakukan
@@ -142,42 +143,43 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card h-100 bg-dark text-white">
+            <div class="card h-100 bg-dark text-white rounded-4">
               <img
                 src="./assets/jadwal.png"
-                class="card-img-top"
+                class="card-img-top img-fluid w-50 mx-auto mt-3"
                 alt="Jadwal Bimbingan"
               />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <h5 class="card-title">Jadwal Bimbingan</h5>
                 <p class="card-text">
                   Untuk menginput semua Jadwal Bimbingan Mahasiswa yang akan
                   melakukan pendampingan Bimbingan Tugas Akhir.
                 </p>
-                <a href="form.html" class="btn btn-primary">Input Data</a>
+                <a href="form2.html" class="btn btn-primary">Input Data</a>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 bg-dark text-white">
+            <div class="card h-100 bg-dark text-white rounded-4">
               <img
                 src="./assets/report.png"
-                class="card-img-top"
+                class="card-img-top img-fluid w-50 mx-auto mt-3"
                 alt="Tampil Data"
               />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <h5 class="card-title">Tampil Data</h5>
                 <p class="card-text">
                   Untuk Menampilkan Semua Data Mahasiswa dan Jadwal Bimbingan
                   Mahasiswa yang telah melakukan pendampingan Bimbingan TA.
                 </p>
-                <a href="#" class="btn btn-primary">Lihat Data</a>
+                <a href="data.html" class="btn btn-primary">Lihat Data</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
