--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
                   Untuk menginput semua Data Mahasiswa yang akan melakukan
                   pendampingan Bimbingan Tugas Akhir.
                 </p>
-                <a href="form.html" class="btn btn-primary">Input Data</a>
+                <a href="dataMhs.html" class="btn btn-primary">Input Data</a>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
                   Untuk menginput semua Jadwal Bimbingan Mahasiswa yang akan
                   melakukan pendampingan Bimbingan Tugas Akhir.
                 </p>
-                <a href="form2.html" class="btn btn-primary">Input Data</a>
+                <a href="jadwalMhs.html" class="btn btn-primary">Input Data</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
                   Untuk Menampilkan Semua Data Mahasiswa dan Jadwal Bimbingan
                   Mahasiswa yang telah melakukan pendampingan Bimbingan TA.
                 </p>
-                <a href="data.html" class="btn btn-primary">Lihat Data</a>
+                <a href="report.html" class="btn btn-primary">Lihat Data</a>
               </div>
             </div>
           </div>
