--- a/dataMhs.html
+++ b/dataMhs.html
@@ -5,25 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Input Mahasiswa</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
-    <div class="login-box">
-      <form class="form">
+    <div class="input-box">
+      <form id="InputMhs" class="form">
+        <a href="#">Input Mahasiswa</a>
         <div class="input-container">
           <label for="NIM">NIM:</label>
-          <input
-            id="NIM"
-            class="input"
-            type="text"
-          />
+          <input id="NIM" class="input" type="text" />
         </div>
         <div class="input-container">
           <label for="noHp">No. Hp:</label>
-          <input
-            id="noHp"
-            class="input"
-            type="text"
-          />
+          <input id="noHp" class="input" type="text" />
+        </div>
         <div class="input-container">
           <label for="email">Email:</label>
           <input
@@ -43,10 +38,10 @@
           />
         </div>
 
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
 
-    <script src="main.js"></script>
+    <script src="./scripts/mhs.js"></script>
   </body>
 </html>
