--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Login Bimbingan TA</title>
   </head>
   <body>
@@ -20,14 +21,15 @@
           <span>Password</span>
         </div>
 
-        <button class="submit" id="submitBtn">Submit</button>
+        <button
+          class="submit"
+          id="submitBtn"
+          href="./home.html"
+          onclick="sweetAlert()"
+        >
+          SUBMIT
+        </button>
       </div>
-    </div>
-
-    <!-- Alert Box -->
-    <div class="alert-box" id="alertBox">
-      <span class="close-btn" onclick="closeAlert()">×</span>
-      <p>Username dan Password Tidak Boleh Kosong!</p>
     </div>
 
     <script src="main.js"></script>
